--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <h1>Welcome to Puja Vidhi</h1>
     <p>This is a basic HTML template for your project.</p>
 
-    <a href="expt/index.html">Go to Experiment Page</a>
+    <p>
+        <a href="expt/index.html">Go to Experiment Page</a>
+    </p>
+    <p>
+        <a href="ganapati-puja.html">Ganapati Puja</a>
+    </p>
 </body>
 </html>
