save html format

--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -15,6 +15,15 @@
             font-style: normal;
             font-weight: 400;
         }
+
+        .ENG {
+            font-style: italic;
+            color: blue;
+            font-size: x-small;
+            display: none;
+            margin-top: 0;
+            padding-top: 0;
+        }
     </style>
 </head>
 
