--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -32,7 +32,7 @@
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
-    <div id="section3"></div>
+    <div id="deepaaradhana"></div>
 
     <script>
         function loadSection(sectionId, url) {
@@ -46,7 +46,7 @@
 
         loadSection('shuddikarana-mantra', 'general/shuddikarana-mantra.html');
         loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
-        loadSection('section3', 'sections/section3.html');
+        loadSection('deepaaradhana', 'sections/deepaaradhana.html');
     </script>
 
 </body>
