--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -46,7 +46,7 @@
 
         loadSection('shuddikarana-mantra', 'general/shuddikarana-mantra.html');
         loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
-        loadSection('deepaaradhana', 'sections/deepaaradhana.html');
+        loadSection('deepaaradhana', 'general/deepaaradhana.html');
     </script>
 
 </body>
