remove extra <br>

--- a/general/deepaaradhana.html
+++ b/general/deepaaradhana.html
@@ -4,10 +4,10 @@
     ದೀಪತ್ವಂ ಬ್ರಹ್ಮರೂಪೋ ಸಿ ಜ್ಯೋತಿಷಾಂ ಪ್ರಭುರವ್ಯಯ:<br>
     <span class="ENG">
         deepatvaM brahmaroopO si jyOtishaaM prabhuravyaya<br>
-    </span><br>
+    </span>
 
     ಸೌಭಾಗ್ಯಂ ದೇಹಿ ಪುತ್ರಾಂಶ್ಚ ಸರ್ವಾನ್ ಕಾಮಾಂಶ್ಚ ದೇಹಿಮೇ<br>
     <span class="ENG">
         saubhaagyaM daehi putraaMScha sarvaan kaamaaMScha daehimae<br>
-    </span><br>
+    </span>
 </p>
