--- a/general/ganapati-prarthana.html
+++ b/general/ganapati-prarthana.html
@@ -3,12 +3,12 @@
     ಶುಕ್ಲಾಂಬರಧರಂ ವಿಷ್ಣುಂ ಶಶಿವರ್ಣಂ ಚತುರ್ಭುಜಂ ।<br>
     <span class="ENG"></span>
     Shukla-ambara-dharam Vissnnum ShashiVarnnam Catur-Bhujam<br>
-    </span><br>
+    </span>
 
     ಪ್ರಸನ್ನವದನಂ ಧ್ಯಾಯೇತ್ ಸರ್ವವಿಘ್ನೋಪಶಾಂತಯೇ ॥<br>
     <span class="ENG"></span>
     Prasanna-Vadanam Dhyaayet Sarva-Vighno[a-U]pa-Shaantaye<br>
-    </span><br>
+    </span>
 </p>
 
 <h2>ಗುರು ಪ್ರಾರ್ಥನ <span class="ENG">(Guru Prarthana)</span></h2>
@@ -16,10 +16,10 @@
     ನಾರಾಯಣ ಸಮಾರಂಭಾಂ ವ್ಯಾಸ ಶಂಕರ ಮಧ್ಯಮಾಂ<br>
     <span class="ENG">
         naaraayaNa samaaraMbhaaM vyaasa Shankara madhyamaaM<br>
-    </span><br>
+    </span>
 
     ಅಸ್ಮದಾಚಾರ್ಯ ಪರ್ಯಂತಾಂ ವಂದೇ ಗುರು ಪರಂಪರಾಂ<br>
     <span class="ENG">
         asmadaachaarya paryaMtaaM vaMdae guru paraMparaaM<br>
-    </span><br>
+    </span>
 </p>
