--- a/general/shuddikarana-mantra.html
+++ b/general/shuddikarana-mantra.html
@@ -4,10 +4,10 @@
     ಓಂ ಅಪವಿತ್ರಃ ಪವಿತ್ರೋ ವಾ ಸರ್ವಾವಸ್ಥಾಂ ಗತೋಽಪಿ ವಾ |<br>
     <span class="ENG">
         Om Apavitrah Pavitro Vaa Sarvaa-vasthaam Gato-[A]pi Vaa<br>
-    </span><br>
+    </span>
 
     ಯಃ ಸ್ಮರೇತ್ ಪುಂಡರೀಕಾಕ್ಷಂ ಸ ಬಾಹ್ಯಾಭ್ಯಂತರಃ ಶುಚಿಃ ||<br>
     <span class="ENG">
         Yah Smaret-Punnddariikaakssam Sa Baahyaa-Bhyantarah Shucih<br>
-    </span><br>
+    </span>
 </p>
