--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -33,6 +33,7 @@
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
     <div id="deepaaradhana"></div>
+    <div id="achamanam"></div>
 
     <script>
         function loadSection(sectionId, url) {
@@ -47,6 +48,7 @@
         loadSection('shuddikarana-mantra', 'general/shuddikarana-mantra.html');
         loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
         loadSection('deepaaradhana', 'general/deepaaradhana.html');
+        loadSection('achamanam', 'general/achamanam.html');
     </script>
 
 </body>
