--- a/general/ganapati-prarthana.html
+++ b/general/ganapati-prarthana.html
@@ -1,12 +1,12 @@
 <h2>ಗಣಪತಿ ಪ್ರಾರ್ಥನ <span class="ENG">(Ganapati Prarthana)</span></h2>
 <p>
     ಶುಕ್ಲಾಂಬರಧರಂ ವಿಷ್ಣುಂ ಶಶಿವರ್ಣಂ ಚತುರ್ಭುಜಂ ।<br>
-    <span class="ENG"></span>
+    <span class="ENG">
     Shukla-ambara-dharam Vissnnum ShashiVarnnam Catur-Bhujam<br>
     </span>
 
     ಪ್ರಸನ್ನವದನಂ ಧ್ಯಾಯೇತ್ ಸರ್ವವಿಘ್ನೋಪಶಾಂತಯೇ ॥<br>
-    <span class="ENG"></span>
+    <span class="ENG">
     Prasanna-Vadanam Dhyaayet Sarva-Vighno[a-U]pa-Shaantaye<br>
     </span>
 </p>
