--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -36,6 +36,7 @@
     <div id="ganapati-prarthana"></div>
     <div id="deepaaradhana"></div>
     <div id="achamanam"></div>
+    <div id="bhootoochchaatana"></div>
 
     <script>
         function loadSection(sectionId, url) {
@@ -51,6 +52,7 @@
         loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
         loadSection('deepaaradhana', 'general/deepaaradhana.html');
         loadSection('achamanam', 'general/achamanam.html');
+        loadSection('bhootoochchaatana', 'general/bhootoochchaatana.html');
     </script>
 
 </body>
