--- a/ganapati-puja.html
+++ b/ganapati-puja.html
@@ -37,6 +37,7 @@
     <div id="deepaaradhana"></div>
     <div id="achamanam"></div>
     <div id="bhootoochchaatana"></div>
+    <div id="pranayama"></div>
 
     <script>
         function loadSection(sectionId, url) {
@@ -53,6 +54,7 @@
         loadSection('deepaaradhana', 'general/deepaaradhana.html');
         loadSection('achamanam', 'general/achamanam.html');
         loadSection('bhootoochchaatana', 'general/bhootoochchaatana.html');
+        loadSection('pranayama', 'general/pranayama.html');
     </script>
 
 </body>
