--- a/general/puja-end-prarthana.html
+++ b/general/puja-end-prarthana.html
@@ -1,32 +1,32 @@
 <h2>ಪ್ರಾರ್ಥನ <span class="ENG">(Prarthana)</span></h2>
 <p>
-    ಯಸ್ಯ ಸ್ಮೃತ್ಯಾ ಚ ನಾಮೋಕ್ತ್ಯಾ ತಪಃ ಪೂಜಾ ಕ್ರಿಯಾದಿಷು |
+    ಯಸ್ಯ ಸ್ಮೃತ್ಯಾ ಚ ನಾಮೋಕ್ತ್ಯಾ ತಪಃ ಪೂಜಾ ಕ್ರಿಯಾದಿಷು |<br>
     <span class="ENG">
-        yasya smritya cha namoktya tapaH poojaa kriyaadishu |
-    </span><br>
+        yasya smritya cha namoktya tapaH poojaa kriyaadishu |<br>
+    </span>
 
-    ನ್ಯೂನಂ ಸಂಪೂರ್ಣತಾಂ ಯಾತಿ ಸದ್ಯೋ ವಂದೇ ತಮಚ್ಯುತಂ ||
+    ನ್ಯೂನಂ ಸಂಪೂರ್ಣತಾಂ ಯಾತಿ ಸದ್ಯೋ ವಂದೇ ತಮಚ್ಯುತಂ ||<br>
     <span class="ENG">
-        nyUnam sampUrnatAm yAti sadyO-vandE tamachyutam ||
-    </span><br>
+        nyUnam sampUrnatAm yAti sadyO-vandE tamachyutam ||<br>
+    </span>
 
-    ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ಗಣಾಧಿಪ |
+    ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ಗಣಾಧಿಪ |<br>
     <span class="ENG">
-        mantrahInaṃ kriyAhInaṃ bhaktihInaṃ gaṇAdhipa |
-    </span><br>
+        mantrahInaṃ kriyAhInaṃ bhaktihInaṃ gaṇAdhipa |<br>
+    </span>
 
-    ಯತ್ಪೂಜಿತಂ ಮಯಾ ದೇವ ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |
+    ಯತ್ಪೂಜಿತಂ ಮಯಾ ದೇವ ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
     <span class="ENG">
-        yatpUjitaṃ mayA dEva paripUrṇaṃ tadastu tE ||
-    </span><br>
+        yatpUjitaṃ mayA dEva paripUrṇaṃ tadastu tE ||<br>
+    </span>
 
-    ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ________ ________
+    ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ________ ________<br>
     <span class="ENG">
-        AnayA yathAshakti pUjayA cha ________ ________
-    </span><br>
+        AnayA yathAshakti pUjayA cha ________ ________<br>
+    </span>
 
-    ________ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು
+    ________ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು<br>
     <span class="ENG">
-        ________ devatA suprasannaH suprEtO varadO bhavatu
+        ________ devatA suprasannaH suprEtO varadO bhavatu<br>
     </span>
 </p>
