--- a/general/swasti.html
+++ b/general/swasti.html
@@ -2,23 +2,23 @@
 <h2>ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
 
 <p>
-    ಸ್ವಸ್ತಿ ಪ್ರಜಾಭ್ಯಃ ಪರಿಪಾಲಯಂತಾಂ
+    ಸ್ವಸ್ತಿ ಪ್ರಜಾಭ್ಯಃ ಪರಿಪಾಲಯಂತಾಂ<br>
     <span class="ENG">
         swasti prajābhyaḥ paripālayantām<br>
-    </span><br>
+    </span>
 
-    ನ್ಯಾಯೇನ ಮಾರ್ಗೇಣ ಮಹೀಂ ಮಹೀಶಾಃ ।
+    ನ್ಯಾಯೇನ ಮಾರ್ಗೇಣ ಮಹೀಂ ಮಹೀಶಾಃ ।<br>
     <span class="ENG">
         nyāyena mārgeṇa mahīṃ mahīśāḥ<br>
-    </span><br>
+    </span>
 
-    ಗೋಬ್ರಾಹ್ಮಣೇಭ್ಯಶ್ಶುಭಮಸ್ತು ನಿತ್ಯಂ
+    ಗೋಬ್ರಾಹ್ಮಣೇಭ್ಯಶ್ಶುಭಮಸ್ತು ನಿತ್ಯಂ<br>
     <span class="ENG">
         gobrāhmaṇebhyaśśubhamastu nityam<br>
-    </span><br>
+    </span>
 
-    ಲೋಕಾಸ್ಸಮಸ್ತಾಸ್ಸುಖಿನೋ ಭವಂತು ॥
+    ಲೋಕಾಸ್ಸಮಸ್ತಾಸ್ಸುಖಿನೋ ಭವಂತು ॥<br>
     <span class="ENG">
-        lokāḥ-samastāḥ-sukhino bhavantu
-    </span><br>
+        lokāḥ-samastāḥ-sukhino bhavantu<br>
+    </span>
 </p>
