Dattātrēya citta sthira mantra

--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -1,5 +1,7 @@
 <h2>ಆಚಮನಂ <span class="ENG">(Achamanam)</span></h2>
-
+<p>
+    For the first three verses, sip water and recite, ending with `svaha` for males and `namah` for females. Then, wash your hands.
+</p>
 <p>
     ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ <span class="ENG">(Om Keshavaya Svaha)</span><br>
     ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ <span class="ENG">(Om Narayanaya Svaha)</span><br>
