--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <p>
         <a href="ganapati-puja.html">Ganapati Puja</a>
     </p>
+    <p>
+        <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a>
+    </p>
 </body>
 </html>
