--- a/general/bhootoochchaatana.html
+++ b/general/bhootoochchaatana.html
@@ -1,5 +1,5 @@
 <h2>ಭೂತೋಚ್ಛಾಟನ <span class="ENG">(bhootOchchaaTana)</span></h2>
-Smell akshata in deer mudra, at last.. throw akshata to left 
+<p>Smell akshata using deer mudra, then throw it below your left arm. If your partner is on your left, throw it below their left arm.</p>
 <p>
     ಉತ್ತಿಷ್ಠಂತು ಭೂತಪಿಶಾಚಾಃ ಏತೇ ಭೂಮಿ ಭಾರಕಾಃ<br>
     <span class="ENG">
