--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <p>This is a basic HTML template for your project.</p>
 
     <p>
-        <a href="expt/index.html">Go to Experiment Page</a>
+        <a href="TEMPLATE.html">Template for new pujas</a>
     </p>
     <p>
         <a href="ganapati-puja.html">Ganapati Puja</a>
     </p>
     <p>
         <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a>
+    </p>
+    <p>
+        <a href="soundarya-lahari.html">Saundarya Lahari</a>
+    </p>
+
+    <hr>
+    <p>
+        <a href="expt/index.html">Experimental features</a>
     </p>
 </body>
 </html>
