--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -3,35 +3,27 @@
     For the first three verses, sip water and recite, ending with `svaha` for males and `namah` for females. Then, wash your hands.
 </p>
 <p>
-    ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ <span class="ENG">(Om Keshavaya Svaha)</span><br>
-    ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ <span class="ENG">(Om Narayanaya Svaha)</span><br>
-    ಓಂ ಮಾಧವಾಯ ಸ್ವಾಹಾ <span class="ENG">(Om Madhavaya Svaha)</span><br><br>
+    ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ → ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ → ಓಂ ಮಾಧವಾಯ ಸ್ವಾಹಾ<br>
+    <span class="ENG">Om Keshavaya Svaha → Om Narayanaya Svaha → Om Madhavaya Svaha<br></span>
 
-    ಗೋವಿಂದಾಯ ನಮಃ <span class="ENG">(Govindaaya Namaha)</span><br>
-    ವಿಷ್ಣವೇ ನಮಃ <span class="ENG">(Vishnave Namaha)</span><br>
-    ಮಧುಸೂದನಾಯ ನಮಃ <span class="ENG">(Madhusuudanaaya Namaha)</span><br><br>
+    ಗೋವಿಂದಾಯ ನಮಃ → ವಿಷ್ಣವೇ ನಮಃ → ಮಧುಸೂದನಾಯ ನಮಃ<br>
+    <span class="ENG">Govindaaya Namaha → Vishnave Namaha → Madhusuudanaaya Namaha<br></span>
 
-    ತ್ರಿವಿಕ್ರಮಾಯ ನಮಃ <span class="ENG">(Trivikramaaya Namaha)</span><br>
-    ವಾಮನಾಯ ನಮಃ <span class="ENG">(Vaamanaaya Namaha)</span><br>
-    ಶ್ರೀಧರಾಯ ನಮಃ <span class="ENG">(Sridharaaya Namaha)</span><br><br>
+    ತ್ರಿವಿಕ್ರಮಾಯ ನಮಃ → ವಾಮನಾಯ ನಮಃ → ಶ್ರೀಧರಾಯ ನಮಃ<br>
+    <span class="ENG">Trivikramaaya Namaha → Vaamanaaya Namaha → Sridharaaya Namaha<br></span>
 
-    ಹೃಷೀಕೇಶಾಯ ನಮಃ <span class="ENG">(Hrishikeshaaya Namaha)</span><br>
-    ಪದ್ಮನಾಭಾಯ ನಮಃ <span class="ENG">(Padmanaabhaaya Namaha)</span><br>
-    ದಾಮೋದರಾಯ ನಮಃ <span class="ENG">(Daamoodaraaya Namaha)</span><br><br>
+    ಹೃಷೀಕೇಶಾಯ ನಮಃ → ಪದ್ಮನಾಭಾಯ ನಮಃ → ದಾಮೋದರಾಯ ನಮಃ<br>
+    <span class="ENG">Hrishikeshaaya Namaha → Padmanaabhaaya Namaha → Daamoodaraaya Namaha<br></span>
 
-    ಸಂಕರ್ಷಣಾಯ ನಮಃ <span class="ENG">(Sankarshanaaya Namaha)</span><br>
-    ವಾಸುದೇವಾಯ ನಮಃ <span class="ENG">(Vasudevaaya Namaha)</span><br>
-    ಪ್ರದ್ಯುಮ್ನಾಯ ನಮಃ <span class="ENG">(Pradyumnaaya Namaha)</span><br><br>
+    ಸಂಕರ್ಷಣಾಯ ನಮಃ → ವಾಸುದೇವಾಯ ನಮಃ → ಪ್ರದ್ಯುಮ್ನಾಯ ನಮಃ<br>
+    <span class="ENG">Sankarshanaaya Namaha → Vasudevaaya Namaha → Pradyumnaaya Namaha<br></span>
 
-    ಅನಿರುದ್ಧಾಯ ನಮಃ <span class="ENG">(Aniruddhaaya Namaha)</span><br>
-    ಪುರುಷೋತ್ತಮಾಯ ನಮಃ <span class="ENG">(Purushottamaaya Namaha)</span><br>
-    ಅಧೋಕ್ಷಜಾಯ ನಮಃ <span class="ENG">(Adhokshajaaya Namaha)</span><br><br>
+    ಅನಿರುದ್ಧಾಯ ನಮಃ → ಪುರುಷೋತ್ತಮಾಯ ನಮಃ → ಅಧೋಕ್ಷಜಾಯ ನಮಃ<br>
+    <span class="ENG">Aniruddhaaya Namaha → Purushottamaaya Namaha → Adhokshajaaya Namaha<br></span>
 
-    ನಾರಸಿಂಹಾಯ ನಮಃ <span class="ENG">(Narasimhaaya Namaha)</span><br>
-    ಅಚ್ಯುತಾಯ ನಮಃ <span class="ENG">(Achyutaaya Namaha)</span><br>
-    ಜನಾರ್ದನಾಯ ನಮಃ <span class="ENG">(Jaanardanaaya Namaha)</span><br><br>
+    ನಾರಸಿಂಹಾಯ ನಮಃ → ಅಚ್ಯುತಾಯ ನಮಃ → ಜನಾರ್ದನಾಯ ನಮಃ<br>
+    <span class="ENG">Narasimhaaya Namaha → Achyutaaya Namaha → Jaanardanaaya Namaha<br></span>
 
-    ಉಪೇಂದ್ರಾಯ ನಮಃ <span class="ENG">(Upendraaya Namaha)</span><br>
-    ಹರಯೇ ನಮಃ <span class="ENG">(Haraye Namaha)</span><br>
-    ಶ್ರೀಕೃಷ್ಣಾಯ ನಮಃ <span class="ENG">(Srikrishnaaya Namaha)</span><br>
+    ಉಪೇಂದ್ರಾಯ ನಮಃ → ಹರಯೇ ನಮಃ → ಶ್ರೀಕೃಷ್ಣಾಯ ನಮಃ<br>
+    <span class="ENG">Upendraaya Namaha → Haraye Namaha → Srikrishnaaya Namaha<br></span>
 </p>
