--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puja Vidhi</title>
 </head>
+
 <body>
     <h1>Welcome to Puja Vidhi</h1>
     <p>This is a basic HTML template for your project.</p>
 
-    <p>
-        <a href="TEMPLATE.html">Template for new pujas</a>
-    </p>
-    <p>
-        <a href="ganapati-puja.html">Ganapati Puja</a>
-    </p>
-    <p>
-        <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a>
-    </p>
-    <p>
-        <a href="soundarya-lahari.html">Saundarya Lahari</a>
-    </p>
+    <ol>
+        <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
+        <li> <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
+        <li> <a href="soundarya-lahari.html">Soundarya Lahari</a> </li>
+        <li> <a href="venkateswara-puja.html">Venkateswara Puja</a> </li>
+    </ol>
 
     <hr>
-    <p>
-        <a href="expt/index.html">Experimental features</a>
-    </p>
+    <ol>
+        <li>
+            <a href="TEMPLATE.html">Template for new pujas</a>
+        </li>
+        <li>
+            <a href="expt/index.html">Experimental features</a>
+        </li>
+    </ol>
 </body>
+
 </html>
