--- a/soundarya-lahari.html
+++ b/soundarya-lahari.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>ಸೌಂದರ್ಯ ಲಹರಿ (Saundarya Lahari)</title>
+    <title>ಸೌಂದರ್ಯ ಲಹರಿ (Soundarya Lahari)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <h1>ಸೌಂದರ್ಯ ಲಹರಿ <span class="ENG">(Saundarya Lahari)</span></h1>
+    <h1>ಸೌಂದರ್ಯ ಲಹರಿ <span class="ENG">(Soundarya Lahari)</span></h1>
 
     <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
