--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 
 <body>
     <h1>Welcome to Puja Vidhi</h1>
-    <p>This is a basic HTML template for your project.</p>
-
+    <h2>Puja Procedures</h2>
     <ol>
         <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
         <li> <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
         <li> <a href="soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="venkateswara-puja.html">Venkateswara Puja</a> </li>
+        <li> <a href="lakshmi-puja.html">Lakshmi Puja</a> </li>
+        <li> <a href="hanuman-puja.html">Hanumaan Puja</a> </li>
+    </ol>
+
+    <h2>Stotrams & Mantrams</h2>
+    <ol>
+        <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
     </ol>
 
     <hr>
