stotram/lakshmi-chaturvimsati added

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
     <h1>Welcome to Puja Vidhi</h1>
     <h2>Puja Procedures</h2>
     <ol>
-        <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
         <li> <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
+        <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
+        <li> <a href="hanuman-puja.html">Hanumaan Puja</a> </li>
+        <li> <a href="lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
+        <li> <a href="lakshmi-puja.html">Lakshmi Puja</a> </li>
         <li> <a href="soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="venkateswara-puja.html">Venkateswara Puja</a> </li>
-        <li> <a href="lakshmi-puja.html">Lakshmi Puja</a> </li>
-        <li> <a href="hanuman-puja.html">Hanumaan Puja</a> </li>
+        <li> <a href="vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
     </ol>
 
     <h2>Stotrams & Mantrams</h2>
     <ol>
+        <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram.html</a> </li>
+        <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali.html</a> </li>
+        <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram.html</a> </li>
+        <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
+        <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
     </ol>
 
