--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ol>
         <li> <a href="dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
         <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
-        <li> <a href="hanuman-puja.html">Hanumaan Puja</a> </li>
+        <li> <a href="hanumaan-puja.html">Hanumaan Puja</a> </li>
         <li> <a href="lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
         <li> <a href="lakshmi-puja.html">Lakshmi Puja</a> </li>
         <li> <a href="soundarya-lahari.html">Soundarya Lahari</a> </li>
