--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h2>Stotrams & Mantrams</h2>
     <ol>
-        <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram.html</a> </li>
+        <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram (TODO: Add earlier verses)</a> </li>
         <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali.html</a> </li>
         <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram.html</a> </li>
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
