--- a/lakshmi-chaturvimsati.html
+++ b/lakshmi-chaturvimsati.html
@@ -50,25 +50,17 @@
 
 <h2>Literature</h2>
 
-<ul>
-    <li>Dhiksha: <a
-            href="https://youtu.be/JGt7-hnqUHI?si=LQ_724MoWqzajv1Y">https://youtu.be/JGt7-hnqUHI?si=LQ_724MoWqzajv1Y</a>
-    </li>
-    <li>Full details: <a
-            href="https://youtu.be/xdx84r_Byjs?si=mVieId532rQ56mJW">https://youtu.be/xdx84r_Byjs?si=mVieId532rQ56mJW</a>
-    </li>
-    <li>Link N: <a
-            href="https://youtu.be/BmvTfRqDXUc?si=nKTnUXCQ40luj3l-">https://youtu.be/BmvTfRqDXUc?si=nKTnUXCQ40luj3l-</a>
-    </li>
-</ul>
-
-<h3>Sadhana</span></h3>
-<ul>
-    <li>Friday in Tirumla: bathe in Swami Pushkarini, recite on Pushkarini steps</li>
-    <li>At home: 1008 times daily for 40 days; must recite in same spot!!</li>
-    <li>If moving around then do 9 Fridays</li>
-    <li>Only after a head bath (exception if ill)</li>
-</ul>
+<h3>Vakshastala Lakshmi Stotram</h3>
+    
+Every morning after the usual Thomala Seva and Koluvu, Kesavadi Chaturvimsati (24) Namavali followed by Sri
+Venkateswara Sahasranama Archana is recited, while tulasi leaves are being offered by the Vaikhanasa Archaka, at the
+lotus feet of Lord Venkateswara as part of Nitya Tiruvaradhanam. Immediately after the recital of Sri Venkateswara
+Sahasranama Archana (1008 holy names), the Vakshastala Lakshmi is offered with Chaturvimsati Namavali from Varaha
+Puranam, while the sacred Tulasi leaves from the lotus feet of Srivaru is being offered to Goddess Lakshmi and
+Goddess Padmavathi, present at the Chest of Srivaru. This stotram is considered very sacred as it is meant for Vyuha
+Lakshmi present on the Chest of Lord Venkateswara and it will give lot of wealth and prosperity to the devotees who
+recite. After every Archana (during I Archana, II Archana and Night Archana) this stotram is offered to Goddess
+Lakshmi.
 
 </body>
 
