--- a/stotram/lakshmi-chaturvimsati-stotram.html
+++ b/stotram/lakshmi-chaturvimsati-stotram.html
@@ -67,7 +67,7 @@
     </span>
 </p>
 
-<h3ಸ್ತೋತ್ರಂ<span class="ENG">Stotram</span></h3>
+<h3>ಸ್ತೋತ್ರಂ<span class="ENG">Stotram</span></h3>
 
 <p>ನಮಃ ಶ್ರಿಯೈ ಲೋಕಧಾತ್ರ್ಯೈ ಬ್ರಹ್ಮಮಾತ್ರೇ ನಮೋ ನಮಃ |<br>
     <span class="ENG">OM namaSriyai lOka dhaatyrai brahmamaatrae namOnama:<br></span>
