--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1>Welcome to Puja Vidhi</h1>
     <h2>Puja Procedures</h2>
     <ol>
-        <li> <a href="ganapati-puja.html">Ganapati Puja</a> </li>
-        <li> <a href="hanumaan-puja.html">Hanumaan Puja</a> </li>
-        <li> <a href="lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
-        <li> <a href="lakshmi-puja.html">Lakshmi Puja</a> </li>
-        <li> <a href="venkateswara-puja.html">Venkateswara Puja</a> </li>
-        <li> <a href="vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
+        <li> <a href="puja/ganapati-puja.html">Ganapati Puja</a> </li>
+        <li> <a href="puja/hanumaan-puja.html">Hanumaan Puja</a> </li>
+        <li> <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
+        <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
+        <li> <a href="puja/venkateswara-puja.html">Venkateswara Puja</a> </li>
+        <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
     </ol>
     
     <h2>Stotrams & Mantrams</h2>
@@ -35,7 +35,7 @@
     <hr>
     <ol>
         <li>
-            <a href="TEMPLATE.html">Template for new pujas</a>
+            <a href="puja/TEMPLATE-PUJA.html">Template for new pujas</a>
         </li>
         <li>
             <a href="expt/index.html">Experimental features</a>
