--- a/puja/lakshmi-chaturvimsati.html
+++ b/puja/lakshmi-chaturvimsati.html
@@ -44,8 +44,8 @@
                 })
                 .catch(error => console.error('Error fetching the section:', error));
         }
-        loadSection('lakshmi-chaturvimsati-stotram', 'stotram/lakshmi-chaturvimsati-stotram.html');
-        loadSection('lakshmi-chaturvimsati-naamavali', 'stotram/lakshmi-chaturvimsati-naamavali.html');
+        loadSection('lakshmi-chaturvimsati-stotram', '../stotram/lakshmi-chaturvimsati-stotram.html');
+        loadSection('lakshmi-chaturvimsati-naamavali', '../stotram/lakshmi-chaturvimsati-naamavali.html');
     </script>
 
 <h2>Literature</h2>
