--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -196,17 +196,17 @@
                 })
                 .catch(error => console.error('Error fetching the section:', error));
         }
-        loadSection('shuddikarana-mantra', 'general/shuddikarana-mantra.html');
-        loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
-        loadSection('deepaaradhana', 'general/deepaaradhana.html');
-        loadSection('achamanam', 'general/achamanam.html');
-        loadSection('bhootoochchaatana', 'general/bhootoochchaatana.html');
-        loadSection('pranayama', 'general/pranayama.html');
-        loadSection('sankalpam', 'general/sankalpam.html');
-        loadSection('chaamaram', 'general/chaamaram.html');
-        loadSection('puja-end-prarthana', 'general/puja-end-prarthana.html');
-        loadSection('swasti', 'general/swasti.html');
-        loadSection('lakshmi-ashtottara-satanaama-stotram', 'stotram/lakshmi-ashtottara-satanaama-stotram.html');
+        loadSection('shuddikarana-mantra', '../general/shuddikarana-mantra.html');
+        loadSection('ganapati-prarthana', '../general/ganapati-prarthana.html');
+        loadSection('deepaaradhana', '../general/deepaaradhana.html');
+        loadSection('achamanam', '../general/achamanam.html');
+        loadSection('bhootoochchaatana', '../general/bhootoochchaatana.html');
+        loadSection('pranayama', '../general/pranayama.html');
+        loadSection('sankalpam', '../general/sankalpam.html');
+        loadSection('chaamaram', '../general/chaamaram.html');
+        loadSection('puja-end-prarthana', '../general/puja-end-prarthana.html');
+        loadSection('swasti', '../general/swasti.html');
+        loadSection('lakshmi-ashtottara-satanaama-stotram', '../stotram/lakshmi-ashtottara-satanaama-stotram.html');
     </script>
 
 </body>
