--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -290,16 +290,16 @@
                 .catch(error => console.error('Error fetching the section:', error));
         }
 
-        loadSection('shuddikarana-mantra', 'general/shuddikarana-mantra.html');
-        loadSection('ganapati-prarthana', 'general/ganapati-prarthana.html');
-        loadSection('deepaaradhana', 'general/deepaaradhana.html');
-        loadSection('achamanam', 'general/achamanam.html');
-        loadSection('bhootoochchaatana', 'general/bhootoochchaatana.html');
-        loadSection('pranayama', 'general/pranayama.html');
-        loadSection('sankalpam', 'general/sankalpam.html');
-        loadSection('chaamaram', 'general/chaamaram.html');
-        loadSection('puja-end-prarthana', 'general/puja-end-prarthana.html');
-        loadSection('swasti', 'general/swasti.html');
+        loadSection('shuddikarana-mantra', '../general/shuddikarana-mantra.html');
+        loadSection('ganapati-prarthana', '../general/ganapati-prarthana.html');
+        loadSection('deepaaradhana', '../general/deepaaradhana.html');
+        loadSection('achamanam', '../general/achamanam.html');
+        loadSection('bhootoochchaatana', '../general/bhootoochchaatana.html');
+        loadSection('pranayama', '../general/pranayama.html');
+        loadSection('sankalpam', '../general/sankalpam.html');
+        loadSection('chaamaram', '../general/chaamaram.html');
+        loadSection('puja-end-prarthana', '../general/puja-end-prarthana.html');
+        loadSection('swasti', '../general/swasti.html');
     </script>
 
 </body>
