--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
         <li> <a href="puja/venkateswara-puja.html">Venkateswara Puja</a> </li>
         <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
     </ol>
-    
+
     <h2>Stotrams & Mantrams</h2>
     <ol>
         <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
-        <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
-        <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram (TODO: Add earlier verses)</a> </li>
-        <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali.html</a> </li>
-        <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram.html</a> </li>
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
         <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
         <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
+        <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi</a> </li>
+        <ol>
+            <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
+            <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram</a>
+            </li>
+            <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali.html</a> </li>
+            <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram.html</a> </li>
+        </ol>
     </ol>
 
     <hr>
