--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <ol>
         <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
+        <li> <a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a> </li>
         <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
         <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
