--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <h2>Stotrams & Mantrams</h2>
     <ol>
         <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
+        <li> <a href="stotram/maha-mrityunjaya-mantra.html">Maha Mrityunjaya Mantra</a> </li>
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
         <li> <a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a> </li>
         <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
         <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
+        <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
         <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi</a> </li>
         <ol>
