--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -1,7 +1,13 @@
 <h2>ಆಚಮನಂ <span class="ENG">(Achamanam)</span></h2>
+
 <p>
-    For the first three verses, sip water and recite, ending with `svaha` for males and `namah` for females. Then, wash your hands.
+    For the first three verses, sip water and recite, ending with `svaha` for males and `namah` for females. Then, wash your hands.<br><br>
+
+    Only the lower lip should touch the palm.
+    Avoid making any slurping sound.
+    The person beside you should not notice you performing Achamanam.
 </p>
+
 <p>
     ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ → ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ → ಓಂ ಮಾಧವಾಯ ಸ್ವಾಹಾ<br>
     <span class="ENG">Om Keshavaya Svaha → Om Narayanaya Svaha → Om Madhavaya Svaha<br></span>
