--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li> <a href="puja/hanumaan-puja.html">Hanumaan Puja</a> </li>
         <li> <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
         <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
+        <li> <a href="puja/shiva-abhishekam.html">Shiva Abhishekam</a> </li>
+        <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
         <li> <a href="puja/venkateswara-puja.html">Venkateswara Puja</a> </li>
         <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
     </ol>
@@ -27,6 +29,7 @@
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
         <li> <a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a> </li>
         <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
+        <li> <a href="stotram/shiva-panchakshari-stotram.html">Shiva Panchakshari Stotram</a> </li>
         <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
