--- a/puja/veerabhadra-puja.html
+++ b/puja/veerabhadra-puja.html
@@ -83,12 +83,12 @@
     </h2>
 
     <p>
-        ಓಂ ದೈವೀ ಗಾಯತ್ರೀಚಂದಃ - ಪ್ರಾಣಾಯಾಮೇ ವಿನಿಯೋಗಃ ||<br>
+        ಓಂ ದೈವೀ ಗಾಯತ್ರೀಚಂದಃ - ಪ್ರಾಣಾಯಾಮೇ ವಿನಿಯೋಗಃ || <br>
         <br>
-        ಓಂ ಭೂಃ | ಓಂ ಭುವಃ | ಓಂ ಸುವಃ |<br>
-        ಓಂ ಮಹಃ | ಓಂ ಜನಃ | ಓಂ ತಪಃ | ಓಂ ಸತ್ಯಂ |<br>
-        ಓಂ ತತ್ಸವಿತುರ್ವೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ |<br>
-        ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ ||<br>
+        ಓಂ ಭೂಃ | ಓಂ ಭುವಃ | ಓಂ ಸುವಃ | <br>
+        ಓಂ ಮಹಃ | ಓಂ ಜನಃ | ಓಂ ತಪಃ | ಓಂ ಸತ್ಯಂ | <br>
+        ಓಂ ತತ್ಸವಿತುರ್ವೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ | <br>
+        ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ || <br>
         <br>
         ಓಂ ಅಪೋ ಜ್ಯೋತಿ ರಸೋಮೃತಂ ಬ್ರಹ್ಮ ಭೂ-ರ್ಭು-ವಸ್ಸುವರೋಮ್ ||
     </p>
@@ -136,7 +136,8 @@
 
     </p>
 
-    <h2>
+
+    <!-- <h2>
         ಶ್ರೀವೀರಭದ್ರ ಪೂಜಾವಿಧಾನ
     </h2>
 
@@ -351,13 +352,13 @@
         ಗೋಭವ್ಯಾಜ್ಯ ಸುಪಾಚಿತೈರ್ಭಹುವಿಧೈರ್ಭಕ್ಷ್ಯೈಶ್ಚ ಪಕ್ವಾನ್ನಸಂ <br>
         ಭೇದೈಸ್ಸ್ವಾದುಭಿರರ್ಹಭೋಜ್ಯನಿಚಯೈಶ್ಸೋ ಷ್ರೇಶ್ಚ ಲೇ ಹ್ಯೋರ್ಯುತಮ್‌ <br>
         ರಾಜಾನ್ನಂ ಮಣಿಹೇಮಪಾತ್ರನಿಹಿತಂ ಕ್ಷಿರಾನ್ನಮಪ್ಯಾವ್ಯಧ <br>
-        ಧನ್ವೀತಂ ಭವತೇ ನಿವೇದಿತಮಿದಂ ಸ್ವಾಮಿನ್‌ ಸ್ವಕೆರ್ಫುಜ್ಯತಾಮ್‌  | 23 | <br><br>
+        ಧನ್ವೀತಂ ಭವತೇ ನಿವೇದಿತಮಿದಂ ಸ್ವಾಮಿನ್‌ ಸ್ವಕೆರ್ಫುಜ್ಯತಾಮ್‌  | 23 | <br> <br>
 
         ಇದಮದ್ಯತ್ಸದ್ಯೋಘೃತಮೇತ ದ್ಲೋದುಗ್ಧಮಾತ್ಯನೋ ಮಧುರಮ್‌ <br>
-        ಪೀಯೂಷರುಚಿಪಯ ಸ್ತ್ವಿದಮಾದರತೋ ದೇವ ಪೀಯತಾಮಸಕೃತ್‌  | 24 | <br><br>
+        ಪೀಯೂಷರುಚಿಪಯ ಸ್ತ್ವಿದಮಾದರತೋ ದೇವ ಪೀಯತಾಮಸಕೃತ್‌  | 24 | <br> <br>
 
         ಹಸ್ತಮುಖಪಾದಕಮಲಾ ನ್ಯುಪ್ಟಾಂಬುಭಿರೀಶ್ವರೋದ್ದ ಸಂಪ್ರಕ್ಷಾಳ್ಯ <br>
-        ಪಾತ್ರೇ ಸೌವರ್ಣೇಲ. ಸ್ಮಿ ನಾಚಮನಂ ಚ ಕುರು ವೀರಭದ್ರಾಲ_ ದ್ಯ!  | 25 | <br><br>
+        ಪಾತ್ರೇ ಸೌವರ್ಣೇಲ. ಸ್ಮಿ ನಾಚಮನಂ ಚ ಕುರು ವೀರಭದ್ರಾಲ_ ದ್ಯ!  | 25 | <br> <br>
 
         ಮಾಧುರ್ಯವದ್ರುಚಿರಪಕ್ವಫಲಾನಿ ನಾನಾ <br>
         ಜಾತ್ಯುದೃವಾನಿ ಕಡಳೀಮುಖರಾಣಿ ಭಕ್ತ್ಯಾ <br>
@@ -412,7 +413,7 @@
         ಸಾಷ್ಟಾಂಗಂ ಪ್ರಣಿಪತ್ಯತೇ ಪದಯುಗೇ ಸರ್ವಾಲ ಪರಾಧಮೇ <br>
         ತ್ವೇವಂ ದಕ್ಷಮುಖಾಸ್ಸಮಸ್ತ ದಿವಿಷದ್ವರ್ಯಾಸ್ತುವಂತೋಂತರೇ <br>
         ನಿರ್ವಾಜಾಮಲಭಕ್ತಿತಃ ವುರುಕೃಪಾ ಪೂರ್ಣಕ್ಷಣಾಲೋಕಿತಾ <br>
-        ಶೃರ್ಮಾಲ ವಾಪುರಹೋಮಮಹೇಶ ಪ್ರಣುತಂ ಮಾಂ ವೀರಭದ್ರಾಣ ವತಾತ್‌ | 31 | <br><br>
+        ಶೃರ್ಮಾಲ ವಾಪುರಹೋಮಮಹೇಶ ಪ್ರಣುತಂ ಮಾಂ ವೀರಭದ್ರಾಣ ವತಾತ್‌ | 31 | <br> <br>
 
         (ಪ್ರಾಲಂಬಿಮುಕ್ತಾಫಲಜಾಲರಮ್ಯಂ ಸೌವರ್ಣದಂಡೇನ ವಿರಾಜಮಾನಮ್‌ <br>
         ಮಣ್ಯುಲ್ಲ ಸತ್ಕಾಂಚನತುಂಗಶಂಗಂ ಛತ್ರಂ ಸಿತಂ ಸ್ವೀಕುರು ವೀರಭದ್ರ <br>
@@ -423,7 +424,7 @@
 
     <p>
         ಚಮರೀಮೃಗವಾಲಾಲ ಹೃತ ಮೃದುಲೋಮಸ್ತೋಮವಿಸ್ಫುರದ್ದಂಡಮ್‌ <br>
-        ಯುಗಮಿಮನೇನತೇ ಪಾರ್ಕ್ಕಯುಗೇ ಸಂವೀಜಯೇ ಪ್ರಭೋ ಭಕ್ತ್ಯಾ!  | 33 | <br><br>
+        ಯುಗಮಿಮನೇನತೇ ಪಾರ್ಕ್ಕಯುಗೇ ಸಂವೀಜಯೇ ಪ್ರಭೋ ಭಕ್ತ್ಯಾ!  | 33 | <br> <br>
 
         ಚಮರೀಮೃಗವಾಲಾ ౨ ಹೃತ ಮೃದುಲೋಮಸ್ತೋಮವಿಸ್ಫುರದ್ದಂಡಮ್‌ <br>
         ಯುಗಮಿಮನೇನತೇ ಪಾರ್ಕ್ಕಯುಗೇ ಸಂವೀಜಯೇ ಪ್ರಭೋ ಭಕ್ತ್ಯಾ! <br>
@@ -432,22 +433,72 @@
         </b>
     </p>
 
-    <!-- ADD PUJA STEPS HERE -->
-    <!-- ADD PUJA STEPS HERE -->
+ -->
+
+
+
+    <h2>
+        ಶ್ರೀವೀರಭದ್ರ ಪೂಜಾವಿಧಾನ
+    </h2>
+
+    <p>
+        ಭವ್ಯೈಸ್ಸೌರಭಸಂಯುತೈಸ್ಸಗುರುಗೋ ಸರ್ಪಿರ್ಮಧುಸ್ವಚ್ಚಕ <br>
+        ಚ್ಫೂರಾಂಚದ್ದನಸಾರಗುಗ್ಗುಕುಮಿಳಲ್ಲಾಕ್ಷಾರ್ಹ ಸಾಂಬ್ರಾಣಿಕಾ <br>
+        ಕರ್ಪೂರಾದಿ ಮನಸ್ಪತಿಪ್ರಭವ ಸದ್ವಸ್ವಾಘಚರ್ಣೈಃ ಪ್ರಭೋ <br>
+        ದೂಪಂ ತೇ ಪರಿಕಲ್ಪಯಾಮಿ ವರದ ಶ್ರೀ ವೀರಭದ್ರೇಶ್ವರಾ <br>
+        <b>ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಧೂಪಮಾಪಘ್ರುಪಯಾಮಿ ||</b>
+    </p>
+
+    <p>
+        ಅಜ್ಞಾನೋರುತಮೋ౭ ಪಹ ಪ್ರಥಿತಸುಜ್ಞಾನ ಪ್ರಕಾಶಪ್ರದ <br>
+        ಸ್ವಾಮಿನ್‌ ಸಾಂಗನ ವೀರಭದ್ರ ವರದ ಪಸ್ಫೂರ್ತಿ ಮಸ್ತೇ ಪುರಃ <br>
+        ಗವ್ಯಾಜ್ಯಾಲ ಕಸ್ತುವರ್ತಿಭಿಃ ಕನಕಪಾತ್ರಾಂತಸ್ಥಿತೈರ್ಟೀಪಮಾ <br>
+        ಲಾಜಾಲಂ ತ್ವಧುನಾರ್ಚಯಾಮಿ ಭ್ರಯಯನ್ರ್ರಹ್ಮಃ ಕೃಪಾಳೋ౭ ಮಮಾಮ್‌ <br>
+        <b>ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ದೀಪಂದರ್ಶ್ಯಯಾಮಿ ||</b>
+    </p>
+
+    <p>
+        ಗೋಭವ್ಯಾಜ್ಯ ಸುಪಾಚಿತೈರ್ಭಹುವಿಧೈರ್ಭಕ್ಷ್ಯೈಶ್ಚ ಪಕ್ವಾನ್ನಸಂ <br>
+        ಭೇದೈಸ್ಸ್ವಾದುಭಿರರ್ಹಭೋಜ್ಯನಿಚಯೈಶ್ಸೋ ಷ್ರೇಶ್ಚ ಲೇ ಹ್ಯೋರ್ಯುತಮ್‌ <br>
+        ರಾಜಾನ್ನಂ ಮಣಿಹೇಮಪಾತ್ರನಿಹಿತಂ ಕ್ಷಿರಾನ್ನಮಪ್ಯಾವ್ಯಧ <br>
+        ಧನ್ವೀತಂ ಭವತೇ ನಿವೇದಿತಮಿದಂ ಸ್ವಾಮಿನ್‌ ಸ್ವಕೆರ್ಫುಜ್ಯತಾಮ್‌  || <br> <br>
+
+        ಇದಮದ್ಯತ್ಸದ್ಯೋಘೃತಮೇತ ದ್ಲೋದುಗ್ಧಮಾತ್ಯನೋ ಮಧುರಮ್‌ <br>
+        ಪೀಯೂಷರುಚಿಪಯ ಸ್ತ್ವಿದಮಾದರತೋ ದೇವ ಪೀಯತಾಮಸಕೃತ್‌  || <br> <br>
+
+        ಹಸ್ತಮುಖಪಾದಕಮಲಾ ನ್ಯುಪ್ಟಾಂಬುಭಿರೀಶ್ವರೋದ್ದ ಸಂಪ್ರಕ್ಷಾಳ್ಯ <br>
+        ಪಾತ್ರೇ ಸೌವರ್ಣೇಲ. ಸ್ಮಿ ನಾಚಮನಂ ಚ ಕುರು ವೀರಭದ್ರಾಲ_ ದ್ಯ!  || <br> <br>
+
+        ಮಾಧುರ್ಯವದ್ರುಚಿರಪಕ್ವಫಲಾನಿ ನಾನಾ <br>
+        ಜಾತ್ಯುದೃವಾನಿ ಕಡಳೀಮುಖರಾಣಿ ಭಕ್ತ್ಯಾ <br>
+        ಸಂಗ್ಬೃಹ್ಯ ದೇವ ಪುರತೋಲ_ ದ್ಯ ಮಯಾರ್ಪಿತಾನಿ <br>
+        ಶ್ರೀ ವೀರಭದ್ರ ಕೃಪಯಾ ಪರಿಗ್ಭಹ್ಯ ಭುಂಕ್ಷ್ಯವ॥ <br>
+        <b>ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಅಮೃತನಿವೇದನಂ ಸಮರ್ಪಯಾಮಿ ||</b>
+    </p>
+
+    <p>
+        ಸಕಲಮಣಿನಿಕಾಯ ಪ್ರಸ್ಫುರದ್ದೇಮಪಾತ್ರ <br>
+        ಪ್ರಕಟರುಚಿರ ಕರ್ಪೂರೋಜ್ಞ್ವಲದ್ದೀಪ ಪಂಜ್ಯಾ <br>
+        ಜಯವಚನಸಮೇತಂ (ಶ್ರೌತವಾಗ್ಸಿ ಸ್ತುವಂಸ್ವ್ವಾಂ <br>
+        ವರದ ವಿಮಲಭಕ್ಯಾ ಭದ್ರ ನೀರಾಜಯಾಮಿ ॥ <br>
+        <b>ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಕರ್ಪೂರನೀರಾಜನಂ ಸಮರ್ಪಯಾಮಿ ||</b>
+    </p>
 
     <div id="chaamaram"></div>
+
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ<br><br>
+            pūjayā ca bhagavān sarvātmakaḥ <br> <br>
         </span>
 
-        ಶ್ರೀ  ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿ ದೇವತಾ<br>
+        ಶ್ರೀ  ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿ ದೇವತಾ <br>
         <span class="ENG">
             Śrī Bhadrakali sahita Veerabhadraswamy devatā
         </span>
     </b>
+
     <div id="swasti"></div>
 
     <script>
