--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -70,21 +70,25 @@
     </p>
 
     <p>
-        ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ<br>
-        ವಂದೇ ಪನ್ನಗಭೂಷಣಂ ಮೃಗಧರಂ ವಂದೇ ಪಶೂನಾಂ ಪತಿಂ<br>
-        ವಂದೇ ಸೂರ್ಯಶಶಾಂಕವಹ್ನಿನಯನಂ ವಂದೇ ಮುಕುಂದಪ್ರಿಯಂ<br>
-        ವಂದೇ ಭಕ್ತಜನಾಶ್ರಯಂ ಚ ವರದಂ ವಂದೇ ಶಿವಂ ಶಂಕರಂ ||
-    </p>
-
-    <p>
-        ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧ್ಯಾನ ಆವಾಹನಾದಿ
-        ಷೋಡಶೋಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ
+        ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ <br>
+        <span class="ENG">vaMdae SaMbhu mumaapatiM suraguruM vaMdae jagatkaaraNaM <br></span>
+        ವಂದೇ ಪನ್ನಗಭೂಷಣಂ ಮೃಗಧರಂ ವಂದೇ ಪಶೂನಾಂ ಪತಿಂ <br>
+        <span class="ENG">vaMdae pannaga bhooshaNaM mRgadharaM vaMdae paSoonaaM patiM <br></span>
+        ವಂದೇ ಸೂರ್ಯಶಶಾಂಕವಹ್ನಿನಯನಂ ವಂದೇ ಮುಕುಂದಪ್ರಿಯಂ <br>
+        <span class="ENG">vaMdae sooryaSaSaaMka vahninayanaM vaMdae mukuMda priyaM <br></span>
+        ವಂದೇ ಭಕ್ತಜನಾಶ್ರಯಂ ಚ ವರದಂ ವಂದೇ ಶಿವಂ ಶಂಕರಂ || <br>
+        <span class="ENG">vaMdae bhaktajanaaSrayaMcha varadaM vaMdae SivaM SaMkaraM <br></span>
+        <br>
+        ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧ್ಯಾನ ಆವಾಹನಾದಿ <br>
+        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: dhyaana aavaahanaadi <br></span>
+        ಷೋಡಶೋಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ <br>
+        <span class="ENG">shODaSOpachaaraan manasaa samarpayaami <br></span>
     </p>
 
     <h2>ಅಭಿಷೇಕಂ<span class="ENG">Abhishekam</span></h2>
 
     <p>
-        For each verse put some water on the shiva linga
+        For each verse pour some water on the lingam
     </p>
 
     <p>
