--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -71,18 +71,30 @@
 
     <p>
         ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ <br>
-        <span class="ENG">vaMdae SaMbhu mumaapatiM suraguruM vaMdae jagatkaaraNaM <br></span>
+        <span class="ENG">
+            vaMdae SaMbhu mumaapatiM suraguruM vaMdae jagatkaaraNaM <br>
+            I bow to Shambhu, the consort of Uma, the teacher of the gods, the cause of the universe. <br>
+        </span>
         ವಂದೇ ಪನ್ನಗಭೂಷಣಂ ಮೃಗಧರಂ ವಂದೇ ಪಶೂನಾಂ ಪತಿಂ <br>
-        <span class="ENG">vaMdae pannaga bhooshaNaM mRgadharaM vaMdae paSoonaaM patiM <br></span>
+        <span class="ENG">
+            vaMdae pannaga bhooshaNaM mRgadharaM vaMdae paSoonaaM patiM <br>
+            I bow to the one adorned with serpents, who holds a deer, the lord of all beings. <br>
+        </span>
         ವಂದೇ ಸೂರ್ಯಶಶಾಂಕವಹ್ನಿನಯನಂ ವಂದೇ ಮುಕುಂದಪ್ರಿಯಂ <br>
-        <span class="ENG">vaMdae sooryaSaSaaMka vahninayanaM vaMdae mukuMda priyaM <br></span>
+        <span class="ENG">
+            vaMdae sooryaSaSaaMka vahninayanaM vaMdae mukuMda priyaM <br>
+            I bow to the one with the sun, moon, and fire as eyes, beloved of Mukunda. <br>
+        </span>
         ವಂದೇ ಭಕ್ತಜನಾಶ್ರಯಂ ಚ ವರದಂ ವಂದೇ ಶಿವಂ ಶಂಕರಂ || <br>
-        <span class="ENG">vaMdae bhaktajanaaSrayaMcha varadaM vaMdae SivaM SaMkaraM <br></span>
+        <span class="ENG">
+            vaMdae bhaktajanaaSrayaMcha varadaM vaMdae SivaM SaMkaraM <br>
+            I bow to Shiva, Shankara, the refuge of the devotees and the bestower of boons. <br>
+        </span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧ್ಯಾನ ಆವಾಹನಾದಿ <br>
         <span class="ENG">Sree umamahaeSvaraabhyaaM nama: dhyaana aavaahanaadi <br></span>
-        ಷೋಡಶೋಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ <br>
-        <span class="ENG">shODaSOpachaaraan manasaa samarpayaami <br></span>
+        ಸಮಸ್ತ ಉಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">Samastha upachaaraan manasaa samarpayaami</span>
     </p>
 
     <h2>ಅಭಿಷೇಕಂ<span class="ENG">Abhishekam</span></h2>
@@ -92,23 +104,23 @@
     </p>
 
     <p>
-        ನಮಸ್ತೇ ರುದ್ರ ಮನ್ಯವ ಉತೋತ ಇಷವೇ ನಮಃ <br>
+        ನಮಸ್ತೇ ರುದ್ರ <b>ಮನ್ಯವ</b> ಉತೋತ ಇಷವೇ ನಮಃ <br>
         <span class="ENG">Namaste Rudra Manyava Utoota Ishave Namah <br></span>
-        ನಮಸ್ತೇ ಅಸ್ತು ಧನ್ವನೀ ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ | <br>
-        <span class="ENG">Namaste Astu Dhanvani Karabhyam Te Namo Namah | 1 | <br></span><br>
+        ನಮಸ್ತೇ ಅಸ್ತು <b>ಧನ್ವನೆ</b> ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ | | ೧ | <br>
+        <span class="ENG">Namaste Astu Dhanvane Karabhyam Te Namo Namah | 1 | <br></span><br>
 
-        ಯಾ ತೇ ರುದ್ರ ಶಿವಾ ತನೂ ಶಾಂತಾ ತಸ್ಯೈರ್ ನಮೋ ನಮಃ <br>
-        <span class="ENG">Yaa Te Rudra Shiva Tanu Shanta Tasyair Namo Namah <br></span>
-        ನಮೋಸ್ತು ನೀಲಗ್ರೀವಾಯ ಸಹಸ್ರಾಕ್ಷಾಯ ತೇ ನಮಃ | ೨ | <br>
+        ಯಾತೇ ರುದ್ರ ಶಿವಾ ತನೂಃ ಶಾಂತಾ ತಸ್ಯೈರ್ ನಮೋ ನಮಃ <br>
+        <span class="ENG">YaaTae Rudra Shiva Tanu: Shanta Tasyair Namo Namah <br></span>
+        ನಮೋಸ್ತು ನೀಲಗ್ರೀವಾಯ <b>ಸಹಸ್ರಾಕ್ಷಾಯ</b> ತೇ ನಮಃ | ೨ | <br>
         <span class="ENG">Namostu Neelagreevaya Sahasraakshaaya Te Namah | 2 |<br></span><br>
 
-        ಸಹಸ್ರ ಬಾಹವೇ ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ <br>
-        <span class="ENG">Sahasra Baahave Tubhyam Namo Meedhushtamaaya Te <br></span>
+        <b>ಸಹಸ್ರಪಾಣಯೆ</b> ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ <br>
+        <span class="ENG">SahasraPaaNayae Tubhyam Namo Meedhushtamaaya Te <br></span>
         ಕಪರ್ಧಿನೇ ನಮಸ್ತುಭ್ಯಂ ಕಾಲರೂಪಾಯ ತೇ ನಮಃ | ೩ | <br>
         <span class="ENG">Kapardine Namastubhyam Kaalaroopaaya Te Namah | 3 | <br></span><br>
 
-        ನಮಸ್ತೇ ಚಾತ್ತಶಸ್ತ್ರಾಯ ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ <br>
-        <span class="ENG">Namaste Chaattashastraaya Namaste Shulapaanaye <br></span>
+        ನಮಸ್ತೇ <b>ಚಾಽಽತ್ತಶಸ್ತ್ರಾಯ</b> ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ <br>
+        <span class="ENG">Namaste Chaaaa-ttashastraaya Namaste Shulapaanaye <br></span>
         ಹಿರಣ್ಯಪಾಣಯೇ ತುಭ್ಯಂ ಹಿರಣ್ಯಪತಯೇ ನಮಃ | ೪ | <br>
         <span class="ENG">Hiranyapaanaye Tubhyam Hiranyapataye Namah | 4 | <br></span><br>
 
@@ -117,54 +129,54 @@
         ಪಶೂನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಪಥೀನಾಂ ಪತಯೇ ನಮಃ | ೫ | <br>
         <span class="ENG">Pashoonam Pataye Tubhyam Patheenam Pataye Namah | 5 | <br></span><br>
 
-        ಪುಷ್ಟಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕ್ಷೇತ್ರಾಣಾಂ ಪತಯೇ ನಮಃ <br>
+        <b>ಪುಷ್ಟಾನಾಂ</b> ಪತಯೇ ತುಭ್ಯಂ ಕ್ಷೇತ್ರಾಣಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Pushtaanam Pataye Tubhyam Kshetraanam Pataye Namah <br></span>
-        ಆತತಾಯಿ ಸ್ವರೂಪಾಯ ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ | <br>
-        <span class="ENG">Aatataayi Swaroopaaya Vanaanam Pataye Namah | 6 | <br></span><br>
+        <b>ಆತತಾವಿಸ್ವರೂಪಾಯ</b> ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ | <br>
+        <span class="ENG">AatataaviSwaroopaaya Vanaanam Pataye Namah | 6 | <br></span><br>
 
-        ರೋಹಿತಾಯ ಸ್ಥಪತಯೇ ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ <br>
+        ರೋಹಿತಾಯ <b>ಸ್ಥಪತಯೇ</b> ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Rohitaaya Sthapataye Vrikshaanam Pataye Namah <br></span>
-        ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ ಸಾಕ್ಷಾತ್‌ ಕಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ | ೭ | <br>
-        <span class="ENG">Namaste Mantrine Saakshaat Kakshaanam Pataye Namah | 7 | <br></span><br>
+        ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ <b>ಸಾಕ್ಷಾತ್ಕಕ್ಷಾಣಾಂ</b> ಪತಯೇ ನಮಃ | ೭ | <br>
+        <span class="ENG">Namaste Mantrine Saakshaatkakshaanam Pataye Namah | 7 | <br></span><br>
 
-        ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ ಸಾಕ್ಷಾತ್‌ ಪರಾತ್ಮನೇ <br>
-        <span class="ENG">Oushadheenam Cha Pataye Namah Saakshaat Paraatmane <br></span>
+        ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ <b>ಸಾಕ್ಷಾತ್ಪರಾತ್ಮನೇ</b> <br>
+        <span class="ENG">Oushadheenam Cha Pataye Namah SaakshaatParaatmane <br></span>
         ‌ಉಛ್ಛೈರ್ ಘೋಷಾಯ ದೇವಾಯ ಪತ್ತೀನಾಂ ಪತಯೇ ನಮಃ | ೮ | <br>
         <span class="ENG">Ucchair Ghoshaaya Devaaya Patteenam Pataye Namah | 8 | <br></span><br>
 
         ಸತ್ವಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವನಾನಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Satvaanam Pataye Tubhyam Vanaanam Pataye Namah <br></span>
-        ಸಹಮಾನಾಯ ಶಾಂತಾಯ ಶಂಕರಾಯ ನಮೋ ನಮಃ | ೯ | <br>
+        <b>ಸಹಮಾನಾಯ</b> ಶಾಂತಾಯ ಶಂಕರಾಯ ನಮೋ ನಮಃ | ೯ | <br>
         <span class="ENG">Sahamaanaaya Shaantaaya Shankaraaya Namo Namah | 9 | <br></span><br>
 
         ಆಧೀನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವ್ಯಾಧೀನಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Aadheenam Pataye Tubhyam Vyaadheenam Pataye Namah <br></span>
-        ಕಕುಭಾಯ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇಸ್ತು ನಿಷಂಗಿಣೇ | ೧೦ | <br>
-        <span class="ENG">Kakubhaya Namastubhyam Namastestu Nishangine | 10 | <br></span><br>
+        ಕಕುಭಾಯ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ<b>ಽಸ್ತು ನಿಷಂಗಿಣೇ</b> | ೧೦ | <br>
+        <span class="ENG">Kakubhaya Namastubhyam Namastae-stu Nishangine | 10 | <br></span><br>
 
-        ಸ್ತೇನಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕೃತ್ರಿಮಾಯ ನಮೋ ನಮಃ <br>
+        ಸ್ತೇನಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ <b>ಕೃತ್ರಿಮಾಯ</b> ನಮೋ ನಮಃ <br>
         <span class="ENG">Stenaanam Pataye Tubhyam Krutrimaaya Namo Namah <br></span>
-        ತಸ್ಕರಾಣಾಂ ನಮಸ್ತುಭ್ಯಂ ಪತಯೇ ಪಾಪಹಾರಿಣೇ | ೧೧ | <br>
+        <b>ತಸ್ಕರಾಣಾಂ</b> ನಮಸ್ತುಭ್ಯಂ ಪತಯೇ ಪಾಪಹಾರಿಣೇ | ೧೧ | <br>
         <span class="ENG">Taskaraanam Namastubhyam Pataye Paapahaarine | 11 | <br></span><br>
 
-        ವಂಚತೇ ಪರಿವಂಚತೇ ಸ್ತಾಯೂನಾಂ ಪತಯೇ ನಮಃ <br>
+        ವಂಚತೇ ಪರಿವಂಚತೇ <b>ಸ್ತಾಯೂನಾಂ</b> ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Vanchate Parivanchate Sthaayoonam Pataye Namah <br></span>
-        ನಮೋ ನಿಚೇರವೇ ತುಭ್ಯಂ ಅರಣ್ಯ ಪತಯೇ ನಮಃ | ೧೨ | <br>
+        ನಮೋ <b>ನಿಚೇರವೇ</b> ತುಭ್ಯಮರಣ್ಯಪತಯೇ ನಮಃ | ೧೨ | <br>
         <span class="ENG">Namo Nicherave Tubhyam Aranya Pataye Namah | 12 | <br></span><br>
 
-        ಉಷ್ಣೀಷಿಣೇ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ ಪರಮಾತ್ಮನೇ <br>
+        <b>ಉಷ್ಣೀಷಿಣೇ</b> ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ ಪರಮಾತ್ಮನೇ <br>
         <span class="ENG">Ushneeshine Namastubhyam Namaste Paramaatmane <br></span>
-        ವಿಸ್ಮೃತಾಯ ನಮಸ್ತುಭ್ಯಂ ಆಸೀನಾಯ ನಮೋ ನಮಃ | ೧೩ | <br>
-        <span class="ENG">Vismrutaaya Namastubhyam Aaseenaaya Namo Namah | 13 | <br></span><br>
+        <b>ವಿಸ್ಮೃತಾಯ ನಮಸ್ತುಭ್ಯಮಾಸೀನಾಯ</b> ನಮೋ ನಮಃ | ೧೩ | <br>
+        <span class="ENG">Vismrutaaya Namastubhyamaaseenaaya Namo Namah | 13 | <br></span><br>
 
-        ಶಯನಾಯ ನಮಸ್ತುಭ್ಯಂ ಸುಷುಪ್ತಾಯ ನಮೋ ನಮಃ <br>
+        <b>ಶಯನಾಯ</b> ನಮಸ್ತುಭ್ಯಂ <b>ಸುಷುಪ್ತಾಯ</b> ನಮೋ ನಮಃ <br>
         <span class="ENG">Shayanaaya Namastubhyam Sushuptaaya Namo Namah <br></span>
         ಪ್ರಬುಧ್ಧಾಯ ನಮಸ್ತುಭ್ಯಂ ಸ್ಥಿತಾಯ ಪರಮಾತ್ಮನೇ | ೧೪ | <br>
         <span class="ENG">Prabuddhaaya Namastubhyam Sthitaaya Paramaatmane | 14 | <br></span><br>
 
-        ಸಭಾರೂಪಾಯತೇ ನಿತ್ಯಂ ಸಭಾಯಾಃ ಪತಯೇ ನಮಃ <br>
-        <span class="ENG">Sabhaaroopaayate Nityam Sabhaayaah Pataye Namah <br></span>
-        ನಮಃಶಿವಾಯ ಸಾಂಬಾಯ ಬ್ರಹ್ಮಣೇ ಸರ್ವಸಾಕ್ಷಿಣೇ | ೧೫ | <br>
+        ಸಭಾರೂಪಾಯ ತೇ ನಿತ್ಯಂ ಸಭಾಯಾಃ ಪತಯೇ ನಮಃ <br>
+        <span class="ENG">Sabhaaroopaaya tae Nityam Sabhaayaah Pataye Namah <br></span>
+        ನಮಃ ಶಿವಾಯ ಸಾಂಬಾಯ ಬ್ರಹ್ಮಣೇ ಸರ್ವಸಾಕ್ಷಿಣೇ | ೧೫ | <br>
         <span class="ENG">Namah Shivaaya Saambaaya Brahmane Sarvasaakshine | 15 | <br></span><br>
     </p>
 
@@ -243,6 +255,52 @@
         </span>
     </b>
     <div id="swasti"></div>
+
+
+    ನಮಸ್ತೇ ರುದ್ರ ಮನ್ಯವ ಉತೋತ ಇಷವೇ ನಮಃ
+ನಮಸ್ತೇ ಅಸ್ತು ಧನ್ವನೆ ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ |
+
+ಯಾತೇ ರುದ್ರ ಶಿವಾ ತನೂಃ ಶಾಂತಾ ತಸ್ಯೈರ್ ನಮೋ ನಮಃ
+ನಮೋಸ್ತು ನೀಲಗ್ರೀವಾಯ ಸಹಸ್ರಾಕ್ಷಾಯ ತೇ ನಮಃ | ೨ |
+
+ಸಹಸ್ರಪಾಣಯೆ ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ
+ಕಪರ್ಧಿನೇ ನಮಸ್ತುಭ್ಯಂ ಕಾಲರೂಪಾಯ ತೇ ನಮಃ | ೩ |
+
+ನಮಸ್ತೇ ಚಾಽಽತ್ತಶಸ್ತ್ರಾಯ ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ
+ಹಿರಣ್ಯಪಾಣಯೇ ತುಭ್ಯಂ ಹಿರಣ್ಯಪತಯೇ ನಮಃ | ೪ |
+
+ನಮಸ್ತೇ ವೃಕ್ಷರೂಪಾಯ ಹರಿಕೇಶಾಯ ತೇ ನಮಃ
+ಪಶೂನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಪಥೀನಾಂ ಪತಯೇ ನಮಃ | ೫ |
+
+ಪುಷ್ಟಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕ್ಷೇತ್ರಾಣಾಂ ಪತಯೇ ನಮಃ
+ಆತತಾವಿಸ್ವರೂಪಾಯ ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ |
+
+ರೋಹಿತಾಯ ಸ್ಥಪತಯೇ ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ
+ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ ಸಾಕ್ಷಾತ್ಕಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ | ೭ |
+
+ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ ಸಾಕ್ಷಾತ್ಪರಾತ್ಮನೇ
+‌ಉಛ್ಛೈರ್ ಘೋಷಾಯ ದೇವಾಯ ಪತ್ತೀನಾಂ ಪತಯೇ ನಮಃ | ೮ |
+
+ಸತ್ವಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವನಾನಾಂ ಪತಯೇ ನಮಃ
+ಸಹಮಾನಾಯ ಶಾಂತಾಯ ಶಂಕರಾಯ ನಮೋ ನಮಃ | ೯ |
+
+ಆಧೀನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವ್ಯಾಧೀನಾಂ ಪತಯೇ ನಮಃ
+ಕಕುಭಾಯ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇಽಸ್ತು ನಿಷಂಗಿಣೇ | ೧೦ |
+
+ಸ್ತೇನಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕೃತ್ರಿಮಾಯ ನಮೋ ನಮಃ
+ತಸ್ಕರಾಣಾಂ ನಮಸ್ತುಭ್ಯಂ ಪತಯೇ ಪಾಪಹಾರಿಣೇ | ೧೧ |
+
+ವಂಚತೇ ಪರಿವಂಚತೇ ಸ್ತಾಯೂನಾಂ ಪತಯೇ ನಮಃ
+ನಮೋ ನಿಚೇರವೇ ತುಭ್ಯಮರಣ್ಯಪತಯೇ ನಮಃ | ೧೨ |
+
+ಉಷ್ಣೀಷಿಣೇ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ ಪರಮಾತ್ಮನೇ
+ವಿಸ್ಮೃತಾಯ ನಮಸ್ತುಭ್ಯಮಾಸೀನಾಯ ನಮೋ ನಮಃ | ೧೩ |
+
+ಶಯನಾಯ ನಮಸ್ತುಭ್ಯಂ ಸುಷುಪ್ತಾಯ ನಮೋ ನಮಃ
+ಪ್ರಬುಧ್ಧಾಯ ನಮಸ್ತುಭ್ಯಂ ಸ್ಥಿತಾಯ ಪರಮಾತ್ಮನೇ | ೧೪ |
+
+ಸಭಾರೂಪಾಯ ತೇ ನಿತ್ಯಂ ಸಭಾಯಾಃ ಪತಯೇ ನಮಃ
+ನಮಃ ಶಿವಾಯ ಸಾಂಬಾಯ ಬ್ರಹ್ಮಣೇ ಸರ್ವಸಾಕ್ಷಿಣೇ | ೧೫ |
 
     <script>
         function loadSection(sectionId, url) {
